[Qt] request parameter of QQuickWebView::navigationRequested is not a registered type https://bugs.webkit.org/show_bug.cgi?id=73826

Patch by Jesus Sanchez-Palencia <jesus.palencia@openbossa.org> on 2011-12-09
Reviewed by Tor Arne Vestbø.

.:

* Source/qtwebkit-export.map: Adding QWebNavigationRequest

Source/WebKit/qt:

* declarative/plugin.cpp:
(WebKitQmlPlugin::registerTypes): Registering QWebNavigationRequest

Source/WebKit2:

Adding QWebNavigationRequest by moving NavigationRequest out of QtWebPagePolicyClient.

* Target.pri:
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qwebnavigationrequest.cpp: Added.
(QWebNavigationRequestPrivate::QWebNavigationRequestPrivate):
(QWebNavigationRequestPrivate::~QWebNavigationRequestPrivate):
(QWebNavigationRequest::QWebNavigationRequest):
(QWebNavigationRequest::~QWebNavigationRequest):
(QWebNavigationRequest::setAction):
(QWebNavigationRequest::url):
(QWebNavigationRequest::button):
(QWebNavigationRequest::modifiers):
(QWebNavigationRequest::action):
* UIProcess/API/qt/qwebnavigationrequest_p.h: Added.
* UIProcess/qt/QtWebPagePolicyClient.cpp:
(QtWebPagePolicyClient::decidePolicyForNavigationAction):
(QtWebPagePolicyClient::decidePolicyForResponse):

Canonical link: https://commits.webkit.org/90903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102502 268f45cc-cd09-0410-ab3c-d52691b4dbfc